# ete_deployment

./: params.yaml  pyproject.toml
.dvc/: config
dvclive/: metrics.json  report.html
dvclive/plots/metrics/eval/: acc.tsv  loss.tsv
dvclive/plots/metrics/train/: acc.tsv  loss.tsv
plots/: confusion.csv
